# Student-Grade-Evaluator

./: README.md
Student_Grade_Manager/: CMakeLists.txt  Makefile
Student_Grade_Manager/data/: students.csv
Student_Grade_Manager/src/: file_handler.cpp  file_handler.h  main.cpp  student.cpp  student.h
Student_Grade_Manager/tests/: test_student.cpp
